--- a/1-base/src/main/res/layout/activity_stopwatch.xml
+++ b/1-base/src/main/res/layout/activity_stopwatch.xml
@@ -74,5 +74,17 @@
                 android:background="@drawable/button_background"
                 android:text="@string/btn_label_reset" />
         </LinearLayout>
+
+            <TextView android:id="@+id/notice"
+                android:layout_columnSpan="2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/updatefrequencynotice"
+                android:visibility="invisible"
+                android:textColor="@color/white"
+                android:includeFontPadding="false"
+                android:textSize="12sp" />
+
     </RelativeLayout>
 </android.support.wearable.view.BoxInsetLayout>
